<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_home"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_margin="32dp"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardControles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"


        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controles"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/swMonitoramento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monitoramento"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/swOverlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostrar_overlay"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardConfigAtual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        app:layout_constraintTop_toBottomOf="@id/cardControles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuracao_atual"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lbl_valor_km"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_valor_km"

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIniciar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="200dp"
        android:text="@string/btn_iniciar"

        app:layout_constraintTop_toBottomOf="@id/cardConfigAtual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfiguracoes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_configuracoes"

        app:layout_constraintTop_toBottomOf="@id/btnIniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHistorico"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_historico"

        app:layout_constraintTop_toBottomOf="@id/btnConfiguracoes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>